[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/PieceSlot/PieceSlot.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Piece/Piece.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Backpanel" type="Panel" parent="."]
show_behind_parent = true
margin_right = 54.4
margin_bottom = 54.4
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Piece" parent="." instance=ExtResource( 2 )]
position = Vector2( 3.2, 3.2 )
scale = Vector2( 1.5, 1.5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="piece_clicked" from="Piece" to="." method="_on_Piece_piece_clicked"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
